--- a/AdventOfCode/AdventOfCode.fsproj
+++ b/AdventOfCode/AdventOfCode.fsproj
@@ -55,11 +55,14 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <None Include="App.config" />
-    <Compile Include="stars.fs" />
-    <Compile Include="Program.fs" />
+    <Compile Include="day2.fs" />
+    <Compile Include="day4.fs" />
     <Content Include="packages.config" />
     <Content Include="day1input.txt" />
     <Content Include="day2input.txt" />
+    <Compile Include="Program.fs" />
+    <Compile Include="day1.fs" />
+    <Compile Include="day3.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FsAlg">
