--- a/AdventOfCode/AdventOfCode.fsproj
+++ b/AdventOfCode/AdventOfCode.fsproj
@@ -11,8 +11,9 @@
     <AssemblyName>AdventOfCode</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
+    <TargetFSharpCoreVersion>4.4.1.0</TargetFSharpCoreVersion>
     <Name>AdventOfCode</Name>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -60,11 +61,12 @@
     <Compile Include="day3.fs" />
     <Compile Include="day4.fs" />
     <Compile Include="day6.fs" />
+    <Compile Include="day5.fs" />
+    <Compile Include="day8.fs" />
     <Content Include="packages.config" />
     <Content Include="day1input.txt" />
     <Content Include="day2input.txt" />
     <Compile Include="Program.fs" />
-    <Compile Include="day5.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FsAlg">
